# QtYomi

./: CMakeLists.txt  main.cpp
content/: App.qml  ReaderView.qml
src/: ChapterController.cpp  ChapterController.h  DatabaseManager.cpp  DatabaseManager.h  MangaController.cpp  MangaController.h  main.cpp
